# open-iterator

./: .gitignore  AGENT.md  AGENTS_AS_APPS.md  CAPABILITY.toml  Cargo.toml  INTEGRATION.md  README.md  ternary_integration.rs
coverage-gap/: Cargo.toml  INTEGRATION.md
coverage-gap/src/: lib.rs  parse.rs  plugin.rs  report.rs  simplicial.rs
docs/: FUTURE-INTEGRATION.md
lapce-proxy/: Cargo.toml
lapce-proxy/src/: lib.rs
lapce-proxy/src/si/: agent_assist.rs  mod.rs
memory/: JOURNAL.md
